# smbios-dump-rs

./: Cargo.toml
.github/workflows/: ci.yml  release.yml
smbios/: Cargo.toml
smbios-derive/: Cargo.toml
smbios-derive/src/: lib.rs
smbios/examples/: smbios-dump.rs
smbios/src/: lib.rs  windows.rs
src/: error.rs  main.rs  unix.rs
