[workspace]
resolver = "3"
members = ["smbios", "smbios-derive"]

[workspace.package]
version = "0.1.0"
authors = ["9506hqwy"]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/9506hqwy/smbios-dump-rs"
license = "MIT OR Apache-2.0"

[profile.release]
strip = "symbols"
lto = true
