[package]
name = "smbios"
version = "0.1.0"
authors = ["9506hqwy"]
edition = "2021"
rust-version = "1.60"
repository = "https://github.com/9506hqwy/smbios-dump-rs"
license = "MIT OR Apache-2.0"
keywords = ["smbios"]
categories = ["development-tools"]

[dependencies]
bytes = "1.1.0"
once_cell = "1.13.0"
smbios_derive = { path="../smbios-derive" }
uuid = "1.1.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.51.1"
features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
]
