[package]
name = "smbios"
keywords = ["smbios"]
categories = ["development-tools"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bytes = "1.4.0"
smbios_derive = { path="../smbios-derive" }
uuid = "1.4.1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62.0"
features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
]
